k8s/raspi/infrastructure/configs/hubble-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble-raspi.greedo.net`)
      kind: Rule
      middlewares:
        - name: oidc-auth
          namespace: kube-system
      services:
        - name: hubble-ui
          port: 80
  tls:
    secretName: greedo-net-wildcard-tls
